Uploaded image for project: 'Traffic Server'
  1. Traffic Server
  2. TS-471

We don't "set" Content-Length: header properly for > 2^31 values

    XMLWordPrintableJSON

Details

    • Bug
    • Status: Closed
    • Major
    • Resolution: Fixed
    • None
    • 2.1.4
    • HTTP
    • None

    Description

      If the body is a chunked encoded response, and we convert it to have a content-length header, I believe we don't produce a correct value for the CL: header. The code is

      inline void
      MIMEHdr::set_content_length(int64 value)
      {
      value_set_int(MIME_FIELD_CONTENT_LENGTH, MIME_LEN_CONTENT_LENGTH, value);
      }

      but I'm fairly certain we want the equivalent of value_set_int64() (which doesn't exist). Marking this one for v2.1.4, since it most likely doesn't work properly for > 2^31 chunked encoded objects.

      Attachments

        Activity

          People

            zwoop Leif Hedstrom
            zwoop Leif Hedstrom
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved: