TS-471 Make it possible to "write" Content-Length headers > 2GB.

git-svn-id: https://svn.apache.org/repos/asf/trafficserver/traffic/trunk@1002764 13f79535-47bb-0310-9956-ffa450edef68